--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v5
+        with:
+          path: target/
       - name: Upload pages artifacts
         uses: actions/upload-pages-artifact@v3
         with:
