--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,10 @@ jobs:
           # Mostly to avoid GitHub rate limiting
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - uses: cachix/cachix-action@v15
+        with:
+          name: kuviman
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Build release
         run: nix develop --command just build
       - name: Upload artifacts
