--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,16 +6,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install Nix
-        uses: cachix/install-nix-action@v17
+      - uses: cachix/install-nix-action@v25
         with:
+          nix_path: nixpkgs=channel:nixpkgs-unstable
           # Mostly to avoid GitHub rate limiting
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - uses: cachix/cachix-action@v15
+      - uses: cachix/cachix-action@v14
         with:
-          name: kuviman
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          name: mycache
+          # If you chose API tokens for write access OR if you have a private cache
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Build release
         run: nix develop --command just build
       - name: Upload artifacts
